// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate Java SDK,
// which is released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/sdk-java/blob/main/LICENSE
syntax = "proto3";

package counter;

import "dev/restate/ext.proto";

option java_multiple_files = true;
option java_package = "dev.restate.sdk.lambda.testservices";

service JavaCounter {
  option (dev.restate.ext.service_type) = KEYED;

  rpc Get (CounterRequest) returns (GetResponse);
}

service KotlinCounter {
  option (dev.restate.ext.service_type) = KEYED;

  rpc Get (CounterRequest) returns (GetResponse);
}

message CounterRequest {
  string counter_name = 1 [(dev.restate.ext.field) = KEY];
}

message GetResponse {
  int64 value = 1;
}